# alterna

./: .env.example  .env.sample  .gitignore  Dockerfile  LICENSE.md  README.Docker.md  README.md  alembic.ini  compose.yaml  config.yaml  go.mod  main.go  openapi.yaml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci-build.yml  frontend-ci.yml
api/: api.go
app/: main.py
app/db/: db.py
app/internal/: __init__.py
app/internal/crypt/: crypt.py  (+1 more)
app/repositories/: __init__.py
app/routers/: __init__.py  mitsuisumitomo_bank.py  mitsuisumitomo_bank_websocket.py  mitsuisumitomo_card.py  rakuten_bank.py  router.py  sbi_benefit_system.py  sbi_shinsei_bank.py  sumishin_sbi_bank.py  websocket_router.py
app/services/: __init__.py  scraping_service.py  two_factor_scraping_service.py
database/: postgres.go
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  quasar.config.ts
frontend-react-app/src/: App.css
frontend-react/frontend-react-app/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
handler/: handler.go
migrations/: env.py
migrations/versions/: 010ca7e89990_create_sumishin_sbi_banks.py  3eb8bd98a4e7_create_rakuten_banks.py  430d82b978be_create_sbi_benefit_systems.py  6d952b878ab9_create_mitsuisumitomo_cards_table.py  9d8c9db7e7cc_create_sbi_shinsei_banks.py  b8787137afdf_create_mitsuisumitomo_banks.py  e26ecb5bf82b_create_mitsuisumitomo_cards_table.py
scraping/mitsuisumitomo_bank/: scraping.py
scraping/mitsuisumitomo_card/: scraping.py
scraping/rakuten_bank/: service.py
(+90 files in other folders)
